--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <HR>
 
 <H1>This is a Header</H1>
-
+<p> Помните это: никто другой не может решать за вас. Все чужие заповеди, все приказы, все морали только искалечат вас. Вы должны решать за себя сами, вы должны взять свою жизнь в собственные руки. Иначе жизнь будет продолжать стучаться в двери, а вас никогда не будет дома — вы всегда будете где-то в другом месте.</p>
 <HR>
 </BODY>
 </HTML>
